# SteinICP-Odometry-and-Mapping

./: .gitignore  LICENSE  README.md
eval/: ComareCov.m  Odometry.asv  Odometry.m  ParticleWeights.m  ResultSaver.m  Runtime.m  curve_dist_test.m  plot_error.m  plot_trajectory.m  plot_trajectory2.m  pointcloud_check.m  read_ros2bag.asv  read_ros2bag.m  trajTest.m
eval/GroundTruth_Reader/Boreas_gt_reader/: Boreas_gt_2020-12-18-13-44.mat  Boreas_gt_2021-01-26-11-22.mat  Boreas_gt_reader.m  boreas_test.m  gps_gt_plot.m
eval/GroundTruth_Reader/CA_gt_reader/: CA_Lidar_gt.mat  CA_gt.mat  CA_gt_plot.m  CA_gt_reader.m
eval/Results/BR/Day/: CovAmplitudeComp.fig  Day_KFVoxel1.fig  Day_KFVoxel1.mat  Day_KFVoxel2.fig  Day_KFVoxel2.mat  Day_KISS.mat  Day_MapPoints20.fig  Day_MapPoints20.mat  Day_NewCorr.fig  Day_NewCorr.mat  Day_Particle100.fig  Day_Particle100.mat  Day_Particle1000.fig  Day_Particle1000.mat  Day_Particle200.fig  Day_Particle200.mat  Day_Particle500.fig  Day_Particle500.mat  Day_SCVoxel2.fig  Day_SCVoxel2.mat  Day_SouceVoxel02.fig  Day_SourceVoxel02.mat  Day_Voxel1.fig  Day_Voxel1.mat  Day_Voxel2.fig  Day_Voxel2.mat  Day_WeightParticle1000.fig  Day_WeightParticle1000.mat  SegVoxel01.mat  SegVoxel02.mat
eval/Results/BR/Snowing/: KISS.mat  NewRuntimeCompare.fig  Snowing_KFVoxel1.fig  Snowing_KFVoxel1.mat  Snowing_Voxel1.fig  Snowing_Voxel1.mat  Snowing_Voxel2.fig  Snowing_Voxel2.mat
eval/Results/CA/: CA_Particle1000.mat  CA_Particle40.mat  CA_Source02_WeightParticle1000.mat  CA_SourceVoxel02.mat  CA_kiss.mat  Particle1000.fig  Particle40.fig  SouceVoxel02.fig  WeightParticle1000.fig
eval/src/: BetweenPose.m  CrossCorr.m  FindIdxInterval.m  LoadGroundTruth.m  Transform2GT.m  Transform2InitCoordiate.m  import_gt.m
stein_particle_msgs/: CMakeLists.txt  package.xml
stein_particle_msgs/msg/: Runtime.msg  SteinParameters.msg  SteinParticle.msg
steinicp_om/: CMakeLists.txt  package.xml
steinicp_om/config/: ScanContext_parameters.yaml  SteinICP.rviz  SteinICP_parameters.yaml
steinicp_om/include/ScanContext/: ScanContext.h
steinicp_om/include/Segmentation/: imageProjection.h  utility.h
steinicp_om/include/data/: DataTypes.h
steinicp_om/include/fgo_interface/: onlineFGO_test.h
steinicp_om/include/stein_icp/: BetaSteinICP.h  SteinICP.h  VoxelHashMap.h  steinicp_ros2.h  steinicp_utils.h  types.h
steinicp_om/include/stein_icp/knn/: knn.h
steinicp_om/include/utils/: Constants.h  GNSSUtils.h  GPutils.h  LambdaAlgorithm.h  MeasurmentDelayCalculator.h  NavigationTools.h  Pose3utils.h  ROSBase.h  ROSParameter.h  ROSQoS.h
steinicp_om/launch/: SteinICP_node.launch.py
steinicp_om/src/ScanContext/: ScanContext.cpp
steinicp_om/src/fgo_interface/: onlineFGO_test.cpp
steinicp_om/src/node/: stein_icp_node.cpp
steinicp_om/src/stein_icp/: BetaSteinICP.cpp  SteinICP.cpp  VoxelHashMap.cpp  steinicp_ros2.cpp  steinicp_utils.cpp
steinicp_om/src/stein_icp/knn/: knn.cpp
